--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: William Cutler
+title: My Website
 
 # Your name to show in the footer
 author: William Cutler
@@ -88,10 +88,10 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  # twitter: true
-  # facebook: true
-  # linkedin: true
-  # vk: false
+  twitter: false
+  facebook: false
+  linkedin: true
+  vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
