--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ github: william-cutler
   # twitter: daattali
   # patreon: DeanAttali
   # youtube: c/daattali
-medium: @williamcutler2001
+medium: williamcutler2001
 #  reddit: yourname
 linkedin: william-r-cutler
 #  xing: yourname
